--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
 		"eslint": "^8.31.0",
 		"eslint-config-prettier": "^8.6.0",
 		"eslint-plugin-prettier": "^4.2.1",
-		"nodemon": "^2.0.16",
+		"nodemon": "^2.0.20",
 		"prettier": "^2.8.3",
 		"typescript": "^4.9.4"
 	},
 	"dependencies": {
-		"@nut-tree/nut-js": "^2.3.0",
+		"@nut-tree/nut-js": "^3.0.1-next.20230117103019",
 		"dotenv": "^16.0.3",
 		"jimp": "^0.16.2",
+		"ts-node": "^10.9.1",
 		"ws": "^8.8.0"
 	}
 }
